@@ -24,6 +24,7 @@ override.
 * Removed manual PYTHONPATH setting in example runner.
 * Formatting tweaks.
 * Updated TODO and README.
+* Added admin upload script.
 
 2008.11.10
 
